      id is specified to ``bzr cat-revision``. (Jelmer Vernooij, #175569)

    * Trailing text in the dirstate file could cause the C dirstate parser
      to try to allocate an invalid amount of memory. We now properly
      check and test for parsing a dirstate with invalid trailing data.
      (John Arbash Meinel, #186014)

    * Use a Windows api function to get a Unicode host name, rather than
      assuming the host name is ascii.
      (Mark Hammond, John Arbash Meinel, #256550)

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

    * The deprecated ``Branch.abspath`` and unimplemented 
      ``Branch.rename_one`` and ``Branch.move`` were removed. (Jelmer Vernooij)

    * BzrDir.clone_on_transport implementations must now accept a stacked_on
      parameter.  (Aaron Bentley)

    * BzrDir.cloning_metadir implementations must now take a require_stacking
      parameter.  (Aaron Bentley)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

    * ``selftest``'s ``--starting-with`` option can now use predefined
      prefixes so that one can say ``bzr selftest -s bp.loom`` instead of
      ``bzr selftest -s bzrlib.plugins.loom``. (Vincent Ladeuil)

    * ``selftest``'s ``--starting-with`` option now accepts multiple values.
      (Vincent Ladeuil)

  INTERNALS:

    * A new plugin interface, ``bzrlib.log.log_adapters``, has been added.